Change Log -Format and Order 3
Continuing to format and order everything for future usage.

Temporary Header and Footer template waiting approval

--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Footer Component</title>
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-  
+  <footer>
+    <div class="f-left">
+      <div style="
+        width: 125px;">
+        <img class="temporary-logo" src="/assets-and-images/temporary-logo.jpg">
+      </div>
+      <div>
+        The Gospel Tabernacle Church of Jesus Christ Apostolic HQ
+      </div>
+      <div style="font-size: 10px;">
+        The Gospel Tabernacle Church of Jesus Christ (Apostolic) Inc 
+        <br> <!--Basically a New Line-->
+        <span>All Rights Reserved</span>
+      </div>
+      <div class="socials" style="
+      display: block;
+      height: 37.5px;
+      width: 100px;
+      background-color: lightpink;
+      ">
+      social links
+      </div>
+
+
+    </div>
+    <div class="f-middle">Address
+      
+    </div>
+    <div class="f-right">Contact
+      <div>
+        <p>PhoneNumber 123</p>
+        <p>Email</p>
+        <p>Facebook</p>
+        <p>Instagram</p>
+        <p>Youtube</p>
+        <p>Development</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
