Change Log -Getting Stuff Approved
1. Header is approved, and header2 was the one that wasn't.

2. Footer is in between since it isn't done yet.

3. Given some information, we can use so I can start assignments.

--- a/Website/styles/main.css
+++ b/Website/styles/main.css
@@ -1,3 +1,4 @@
+/* Clean this up later, css for this is all over the place and some of it isn't needed */
 body{
   margin: 0;
   font-family: arial;
