Revert "Change Log -Getting Stuff Approved"
This reverts commit 1607825a78e7ffac594510f6361ded026b8fbeff.

--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -11,7 +11,7 @@
     <div class="f-left">
       <div style="
         width: 125px;">
-        <img class="temporary-logo" src="/assets-and-images/logo.png">
+        <img class="temporary-logo" src="/assets-and-images/temporary-logo.jpg">
       </div>
       <div>
         The Gospel Tabernacle Church of Jesus Christ Apostolic HQ
