--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/header-2.css">
-   <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such -->
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
   <header> 
+    <!--For this I wanna try something I seen for Brooklyn Tabernacle, The entire church name is on the top bar but when you scroll down it abbreviates it so we'll have the full organization name and when we scroll it abbreviated to just GTC Inc or something like that-->
+     <div class="banner">
+        <div class="h-left">
+          <img style="
+            width:128px;
+            height:128px;"
+          src="/assets-and-images/temporary-logo.jpg">
+          <p class="hlci">
+          <span>Gospel Tabernacle Church <br>Snyder
+          </p>
+        </div>
+        <div class="h-right">
+          <img src="/assets-and-images/hamburger-menu.svg">
+        </div>
+      </div>  
       <nav>
-          <div class="element">About Us</div>
-          <div class="element">Leadership</div>
-          <div class="element">Departments</div>
-          <img   
-            src="/assets-and-images/logo.png" 
-            style="width:176px;
-              height:176px;"
-          >
-          <div class="element">Events</div>
-          <div class="element">New Here?</div>
-          <div class="element">Contact Us</div>
+        <!--This will be the actual navigation bar for now i'll code it in but for the actual multi-page website were just going to make buttons/assets through FIGMA-->
+        <div>Home</div>
+        <div>Departments</div>
+        <div>Calendar</div>
+        <div>Online Giving</div>
+        <div>Contact Us</div>
       </nav>
   </header>
   
