Change Log -Continuity
1. Created a script that loads the head and footer inside each webpage for us without the need to write it in all of them.

--- a/Website/styles/main.css
+++ b/Website/styles/main.css
@@ -32,7 +32,6 @@ body{
   text-align: center;
 }
 .h-middle{
-  background-color: lightpink;
   flex: 1;
 }
 .h-right{
@@ -42,7 +41,8 @@ body{
   width:64px;
 }
  nav{
-  background-color: lightcoral;
+  position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
