--- a/Website/styles/header.css
+++ b/Website/styles/header.css
@@ -3,8 +3,13 @@ body{
   font-family: arial;
 }
   header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: row;
+  top: 0;
 }
 
 nav{
