Previous Commit continued

--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -8,19 +8,16 @@
 </head>
 <body>
   <header> 
-      <nav>
-          <div class="element">About Us</div>
-          <div class="element">Leadership</div>
-          <div class="element">Departments</div>
-          <img   
-            src="/assets-and-images/logo.png" 
-            style="width:176px;
-              height:176px;"
-          >
-          <div class="element">Events</div>
-          <div class="element">New Here?</div>
-          <div class="element">Contact Us</div>
-      </nav>
+    <nav>
+      <div class="element">About Us</div>
+      <div class="element">Leadership</div>
+      <div class="element">Departments</div>
+      <img id="h-logo"
+        src="/assets-and-images/logo.png" >
+      <div class="element">Events</div>
+      <div class="element">New Here?</div>
+      <div class="element">Contact Us</div>
+    </nav>
   </header>
   
 </body>
