Change Log -Header and Footer
1. Working on the header and footer,

2. I also made a testing folder to test any creations without messing up a webpage file

--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -9,14 +9,14 @@
 <body>
   <header> 
     <nav>
-      <div class="element">About Us</div>
-      <div class="element">Leadership</div>
-      <div class="element">Departments</div>
+      <button class="element">About Us</button>
+      <button class="element">Leadership</button>
+      <button class="element">Departments</button>
       <img id="h-logo"
         src="/assets-and-images/logo.png" >
-      <div class="element">Events</div>
-      <div class="element">New Here?</div>
-      <div class="element">Contact Us</div>
+      <button class="element">Events</button>
+      <button class="element">New Here?</button>
+      <button class="element">Contact Us</button>
     </nav>
   </header>
   
