--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -24,25 +24,20 @@
       <div class="socials" style="
       display: block;
       height: 37.5px;
-      width: 100px;
-      background-color: lightpink;
+      width: 125px;
       ">
-      social links
+       <img class="scpic" src="/assets-and-images/facebook.png">
+       <img  class="scpic" src="/assets-and-images/instagram.png">
+       <img  class="scpic" src="/assets-and-images/youtube.png">
       </div>
 
-
     </div>
-    <div class="f-middle">Address
+    <div class="f-middle">
       
     </div>
-    <div class="f-right">Contact
+    <div class="f-right">
       <div>
-        <p>PhoneNumber 123</p>
-        <p>Email</p>
-        <p>Facebook</p>
-        <p>Instagram</p>
-        <p>Youtube</p>
-        <p>Development</p>
+
       </div>
     </div>
   </footer>
