Change Log -Fix
1. Adding some changes to my head and footer file,

2. Fixed file path

--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -22,20 +22,17 @@
         <span>All Rights Reserved</span>
       </div>
       <div class="socials" style="
-      display: block;
-      height: 37.5px;
-      width: 125px;
-      ">
+        display: block;
+        height: 37.5px;
+        width: 125px;
+        ">
        <img class="scpic" src="/assets-and-images/facebook.png">
        <img  class="scpic" src="/assets-and-images/instagram.png">
        <img  class="scpic" src="/assets-and-images/youtube.png">
       </div>
     </div>
-    <div class="f-middle">
-      
-
-    <div class="f-right">
-
+    <div class="f-middle"></div>
+    <div class="f-right"></div>
     </div>
   </footer>
 </body>
