Change Log -Testing
1. Created a event box element that expands and shows the flyer, works for both images and videos

--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -12,8 +12,10 @@
       <button class="element">About Us</button>
       <button class="element">Leadership</button>
       <button class="element">Departments</button>
-      <img id="h-logo"
+      <a href="/">
+        <img id="h-logo"
         src="/assets-and-images/logo.png" >
+      </a>
       <button class="element">Events</button>
       <button class="element">New Here?</button>
       <button class="element">Contact Us</button>
