--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -4,14 +4,14 @@
   <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/footer.css">
+  <link rel="stylesheet" href="../styles/footer.css">
 </head>
 <body>
   <footer>
     <div class="f-left">
       <div style="
         width: 125px;">
-        <img class="temporary-logo" src="/assets-and-images/logo.png">
+        <img class="temporary-logo" src="../assets-and-images/logo.png">
       </div>
       <div>
         The Gospel Tabernacle Church of Jesus Christ Apostolic HQ
@@ -26,9 +26,9 @@
         height: 37.5px;
         width: 125px;
         ">
-       <img class="scpic" src="/assets-and-images/facebook.png">
-       <img  class="scpic" src="/assets-and-images/instagram.png">
-       <img  class="scpic" src="/assets-and-images/youtube.png">
+       <img class="scpic" src="../assets-and-images/facebook.png">
+       <img  class="scpic" src="../assets-and-images/instagram.png">
+       <img  class="scpic" src="../assets-and-images/youtube.png">
       </div>
     </div>
     <div class="f-middle"></div>
