--- a/Website/components/header-2.html
+++ b/Website/components/header-2.html
@@ -4,7 +4,7 @@
     <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <header> 
@@ -16,7 +16,7 @@
           </p>
         </div>
         <div class="h-right">
-          <img src="/assets-and-images/hamburger-menu.svg">
+          <img src="../assets-and-images/hamburger-menu.svg">
         </div>
       </div>  
       <nav>
