--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/header.css">
+  <link rel="stylesheet" href="../styles/header.css">
    <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such.-->
 </head>
 <body>
@@ -14,7 +14,7 @@
       <button class="element">Departments</button>
       <a href="/">
         <img id="h-logo"
-        src="/assets-and-images/logo.png" >
+        src="../assets-and-images/logo.png" >
       </a>
       <button class="element">Events</button>
       <button class="element">New Here?</button>
