Footer & Path update
Added links to the social media images

fix paths

--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -26,9 +26,15 @@
         height: 37.5px;
         width: 125px;
         ">
-       <img class="scpic" src="../assets-and-images/facebook.png">
-       <img  class="scpic" src="../assets-and-images/instagram.png">
-       <img  class="scpic" src="../assets-and-images/youtube.png">
+        <a href="https://www.facebook.com/gospeltabernacle.brooklyn" target="_blank">
+            <img class="scpic" src="../assets-and-images/facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/gtchq/" target="_blank">
+            <img class="scpic" src="../assets-and-images/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.youtube.com/@gtchq623" target="_blank">
+            <img class="scpic" src="../assets-and-images/youtube.png" alt="YouTube">
+        </a>
       </div>
     </div>
     <div class="f-middle"></div>
