Website Deployment Stage 1
1. I'll be putting up the website for testing purposes, it will be redirected back to our Facebook page.

2. Making the Header link to the other website pages

Co-Authored-By: GTCHQDevs <203009018+GTCHQDevs@users.noreply.github.com>

--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -9,16 +9,16 @@
 <body>
   <header> 
     <nav>
-      <button class="element">About Us</button>
-      <button class="element">Leadership</button>
-      <button class="element">Departments</button>
+      <a href="/about-us.html"   class="element">About Us</a>
+      <a href="/leadership.html"   class="element">Leadership</a>
+      <a href="/departments/index.html"   class="element">Departments</a>
       <a href="/">
         <img id="h-logo"
         src="../assets-and-images/logo.png" >
       </a>
-      <button class="element">Events</button>
-      <button class="element">New Here?</button>
-      <button class="element">Contact Us</button>
+      <a href="/calendar.html"   class="element">Events</a>
+      <a href="/new-here.html"   class="element">New Here?</a>
+      <a href="/contact-us.html"   class="element">Contact Us</a>
     </nav>
   </header>
 </body>
