mainly changed the footer
Added more to the footer, not sure if this was the vision but I based it off a reference

It can still be changed

--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -91,7 +91,7 @@
             right: -100%;
             width: 75%;
             height: 100vh;
-            background-color: #FDF2E9; 
+            background-color: #ffffff; 
             box-shadow: -2px 0 5px rgba(0,0,0,0.1);
             z-index: 1000;
             transition: right 0.3s ease;
