--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -9,23 +9,18 @@
 <body>
   <footer>
     <div class="f-left">
-      <div style="
-        width: 125px;">
-        <img class="temporary-logo" src="../assets-and-images/logo.png">
+      <div style="width: 125px;">
+        <img class="temporary-logo" src="../assets-and-images/logo.png" alt="Gospel Tabernacle Logo">
       </div>
-      <div>
+      <div class="church-name">
         The Gospel Tabernacle Church of Jesus Christ Apostolic HQ
       </div>
-      <div style="font-size: 10px;">
+      <div class="copyright">
         The Gospel Tabernacle Church of Jesus Christ (Apostolic) Inc 
-        <br> <!--Basically a New Line-->
+        <br>
         <span>All Rights Reserved</span>
       </div>
-      <div class="socials" style="
-        display: block;
-        height: 37.5px;
-        width: 125px;
-        ">
+      <div class="socials">
         <a href="https://www.facebook.com/gospeltabernacle.brooklyn" target="_blank">
             <img class="scpic" src="../assets-and-images/facebook.png" alt="Facebook">
         </a>
@@ -37,9 +32,67 @@
         </a>
       </div>
     </div>
-    <div class="f-middle"></div>
-    <div class="f-right"></div>
-
+    
+    <div class="f-middle">
+      <div class="contact-info">
+        <h3>Contact Us</h3>
+        <ul class="contact-list">
+          <li class="contact-item">
+            <a href="https://maps.app.goo.gl/tJ7qoJEpSMfPPKZd7" target="_blank">
+              <span class="icon-container">
+                <img src="../assets-and-images/pinpoint-icon.png" alt="Address" class="contact-icon">
+              </span>
+              <span class="contact-text">2314 Snyder Avenue Brooklyn, NY 11226</span>
+            </a>
+          </li>
+          <li class="contact-item">
+            <a href="mailto:noidea@gmail.com">
+              <span class="icon-container">
+                <img src="../assets-and-images/envelope-icon.png" alt="Email" class="contact-icon">
+              </span>
+              <span class="contact-text">noidea@gmail.com</span>
+            </a>
+          </li>
+          <li class="contact-item">
+            <a href="tel:7182823920">
+              <span class="icon-container">
+                <img src="../assets-and-images/phone-icon.png" alt="Phone" class="contact-icon">
+              </span>
+              <span class="contact-text">(718) 282-3920</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      
+    </div>
+    
+    <div class="f-right">
+      <div class="quick-links">
+        <h3>Quick Links</h3>
+        <ul class="links-list">
+          <li><a href="">About Us</a></li>
+          <li><a href="">Leadership</a></li>
+          <li><a href="">Departments</a></li>
+          <li><a href="">Events</a></li>
+          <li><a href="">New Here?</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="map-preview">
+        <h3>Find Us</h3>
+        <div class="map-container-footer">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48434.36199398382!2d-73.95520216269472!3d40.64867613018595!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b413ff319eb%3A0x1c0d9ec380f63b18!2s2314%20Snyder%20Ave%2C%20Brooklyn%2C%20NY%2011226!5e0!3m2!1sen!2sus!4v1743629346906!5m2!1sen!2sus"
+            width="100%" 
+            height="150" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
