--- a/Website/styles/header.css
+++ b/Website/styles/header.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 a{
   text-decoration: none;
 }
@@ -18,6 +22,7 @@ body{
   align-items: center;
   padding-top: 20px;
   padding-bottom: 20px;
+  z-index: 1000;
 }
 
 #h-logo{
@@ -31,26 +36,29 @@ nav{
   flex: 1;
   justify-content: space-between;
   align-items: center;
+  font-family: poppins;
+  font-weight: 500;
   height: 50px;
   padding-left:50px;
   padding-right: 50px;
   width: 100vw;
 }
 .element{
-  background-color: transparent;
+  background-color: #ffffff37;
+  backdrop-filter: blur(10px);
   box-sizing: border-box;
   white-space: nowrap;
   border-style: solid;
-  border-color: #9b1b30;
-  color: #9b1b30;
+  color: #ffffff;
   font-size: 16px;
-  font-weight: 500;
-  border-width: 1.5px;
-  border-radius: 20px;
+  font-weight: 400;
+  letter-spacing: 2.5px;
+  border-width: .8px;
+  border-radius: 24px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   text-align: center;
   transition: 0.25s;
 }
