--- a/Website/styles/header.css
+++ b/Website/styles/header.css
@@ -217,10 +217,11 @@ body {
 .mobile-nav-item a {
   gap: 2px;
   font-family: poppins;
-  font-weight: 500;
+  font-weight: 300;
   text-decoration: none;
   color: #2d2d2d;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  letter-spacing: 2px;
   display: block;
   padding: 0.5rem 0;
   transition: color 0.3s ease;
