--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Instead of adding this aspect to every index file i'll use js to include it to all the pages and just link it as such -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/footer.css">
@@ -9,7 +8,7 @@
 <body>
   <footer>
     <div class="f-left">
-      <div style="width: 125px;">
+      <div style="width: 112px;">
         <img class="temporary-logo" src="../assets-and-images/logo.png" alt="Gospel Tabernacle Logo">
       </div>
       <div class="church-name">
@@ -17,8 +16,6 @@
       </div>
       <div class="copyright">
         The Gospel Tabernacle Church of Jesus Christ (Apostolic) Inc 
-        <br>
-        <span>All Rights Reserved</span>
       </div>
       <div class="socials">
         <a href="https://www.facebook.com/gospeltabernacle.brooklyn" target="_blank">
@@ -63,10 +60,8 @@
           </li>
         </ul>
       </div>
-      
     </div>
-    
-    <div class="f-right">
+    <div class="f-middle2">
       <div class="quick-links">
         <h3>Quick Links</h3>
         <ul class="links-list">
@@ -78,6 +73,9 @@
           <li><a href="">Contact Us</a></li>
         </ul>
       </div>
+    </div>
+    
+    <div class="f-right">
       <div class="map-preview">
         <h3>Find Us</h3>
         <div class="map-container-footer">
