--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&family=Oleo+Script+Swash+Caps:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&family=Oleo+Script+Swash+Caps:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- script style fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Sacramento&family=Tangerine&family=Great+Vibes&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header> 
-    <nav>
-      <a href="/about-us.html"   class="element">About Us</a>
-      <a href="/leadership.html"   class="element">Leadership</a>
-      <a href="/departments/index.html"   class="element">Departments</a>
-      <a href="/">
-        <img id="h-logo"
-        src="../assets-and-images/logo.png" >
-      </a>
-      <a href="/calendar.html"   class="element">Events</a>
-      <a href="/new-here.html"   class="element">New Here?</a>
-      <a href="/contact-us.html"   class="element">Contact Us</a>
-      <button class="hamburger" aria-label="Menu">
-        <img src="../assets-and-images/hamburger-menu.svg" alt="Menu Icon">
-    </button>
-    </nav>
-  </header>
+    <header> 
+        <nav>
+          <a href="/about-us.html"   class="element">About Us</a>
+          <a href="/leadership.html"   class="element">Leadership</a>
+          <a href="/departments/index.html"   class="element">Departments</a>
+          <a href="/">
+            <img id="h-logo"
+            src="../assets-and-images/logo.png" >
+          </a>
+          <a href="/calendar.html"   class="element">Events</a>
+          <a href="/new-here.html"   class="element">New Here?</a>
+          <a href="/contact-us.html"   class="element">Contact Us</a>
+          <button class="hamburger" aria-label="Menu">
+            <img src="../assets-and-images/hamburger-menu.svg" alt="Menu Icon">
+          </button>
+        </nav>
+      </header>
    <!-- Mobile Menu -->
    <div class="menu-overlay"></div>
    <div class="mobile-menu">
