--- a/Website/styles/calendar2.css
+++ b/Website/styles/calendar2.css
@@ -1,18 +1,28 @@
     /* Calendar container */
+    .calendar-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+      padding-top: 40px;
+      padding: 0 80px;
+    }
     #calendar {
-      max-width: 800px;
+      width: 95%;
+      height: auto;
       margin: 40px auto;
       padding: 20px;
       border-radius: 16px;
+      background-color: transparent;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       font-family: 'Segoe UI', sans-serif;
-      color: #333;
+      overflow-x:hidden ;
     }
 
     /* Toolbar Title */
     .fc-toolbar-title {
       font-family: Poppisns, sans-serif;
-      font-size: 28px;
+      font-size: clamp(1.4rem, 2vw, 2.5rem) !important;
       color: #9b1b30; 
       font-weight: bold;
     }
@@ -39,10 +49,11 @@
     }
     .fc-next-button {
       background-image: url('/assets-and-images/icons/arrowWhite.svg');
+      rotate: 180deg;
     }
     .fc-prev-button {
+      margin-right: 100px;
       background-image: url('/assets-and-images/icons/arrowWhite.svg');
-      rotate: 180deg;
     }
 
     .fc-button:hover {
@@ -60,9 +71,6 @@
       transition: background-color 0.2s ease;
     }
 
-    .fc-daygrid-day:hover {
-
-    }
 
     /* Day number in top right corner of each cell */
     .fc-daygrid-day-number {
@@ -73,16 +81,16 @@
 
     /* Events */
     .fc-event {
-      background-color: #9b1b30;
       font-size: 14px;
-      padding: 2px 6px;
+      padding: 6px 6px;
       border-radius: 4px;
       transition: background-color 0.2s ease;
+      color: #fff;
+      background-color: #f1c604c4;
     }
 
     .fc-event:hover {
       background-color: #f1c404;
-      color: #000;
     }
 
     /* Today highlight */
@@ -102,7 +110,7 @@
 
     .fc-list-day-cushion {
       background-color: #f1c404;
-      color: #000;
+
       font-weight: bold;
     }
 
@@ -111,8 +119,8 @@
       #calendar {
         padding: 10px;
       }
-
-      .fc-toolbar-title {
-        font-size: 20px;
+      .calendar-container {
+        padding: 0;
       }
+      
     }
