--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -15,7 +15,7 @@
         <nav>
           <a href="/about-us.html"   class="element">About Us</a>
           <a href="/leadership.html"   class="element">Leadership</a>
-          <a href="/departments/index.html"   class="element">Departments</a>
+          <a href="/departments.html"   class="element">Departments</a>
           <a href="/">
             <img id="h-logo"
             src="../assets-and-images/logo.png" >
