--- a/Website/styles/homepage.css
+++ b/Website/styles/homepage.css
@@ -88,6 +88,8 @@
   flex: row;
   justify-content: space-around;
   align-items: center;
+  border-style: dotted;
+  border-width: 1px;
  }
 
 .p-welcome{
@@ -120,4 +122,45 @@
   .spic{
     filter: invert(13%) sepia(88%) saturate(7491%) hue-rotate(0deg) brightness(97%) contrast(107%);
   }
+
+  .verse-sec{
+    height: 300px;
+  }
+}
+
+.events-sec{
+  padding-top: 50px;
+  padding-bottom:50px;
+  padding-left: min(4.5em, 6%);
+  padding-right: min(4.5em, 6%);
+  height: 600px;
+  position: relative;
+  display: flex;
+  flex: column;
+  justify-content: center;
+  align-items: top;
+  border-style: dotted;
+  border-width: 1px;
+}
+.events-sec h1{
+  font-size: clamp(2rem, 6vw, 4rem);
+}
+.verse-sec{
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  padding-bottom:50px;
+  height: 400px;
+  border-style: dotted;
+  border-width: 1px;
+  justify-content: start;
+  align-items:center;
+  text-align: center;
+  gap: min(20px 8%);
+  background-size: cover;
+  background-position: center;
+}
+.verse-sec h1{
+  font-size: clamp(2rem, 6vw, 4rem);
+  color: #fff;
 }
