Change Log -Additions
1. Too tired to name everything, but I changed: icons, backgrounds, and such

--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -19,13 +19,13 @@
       </div>
       <div class="socials">
         <a href="https://www.facebook.com/gospeltabernacle.brooklyn" target="_blank">
-            <img class="scpic" src="../assets-and-images/facebook.png" alt="Facebook">
+            <img class="scpic" src="../assets-and-images/icons/facebook.svg" alt="Facebook">
         </a>
         <a href="https://www.instagram.com/gtchq/" target="_blank">
-            <img class="scpic" src="../assets-and-images/instagram.png" alt="Instagram">
+            <img class="scpic" src="../assets-and-images/icons/instagram.svg" alt="Instagram">
         </a>
         <a href="https://www.youtube.com/@gtchq623" target="_blank">
-            <img class="scpic" src="../assets-and-images/youtube.png" alt="YouTube">
+            <img class="scpic" src="../assets-and-images/icons/youtube.svg" alt="YouTube">
         </a>
       </div>
     </div>
@@ -47,7 +47,7 @@
               <span class="icon-container">
                 <img src="../assets-and-images/envelope-icon.png" alt="Email" class="contact-icon">
               </span>
-              <span class="contact-text">noidea@gmail.com</span>
+              <span class="contact-text">gtc2314@gmail.com</span>
             </a>
           </li>
           <li class="contact-item">
