--- a/Website/styles/homepage.css
+++ b/Website/styles/homepage.css
@@ -124,7 +124,7 @@
   }
 
   .verse-sec{
-    height: 300px;
+    height: 250px;
   }
 }
 
@@ -133,12 +133,14 @@
   padding-bottom:50px;
   padding-left: min(4.5em, 6%);
   padding-right: min(4.5em, 6%);
+  gap: 30px;
   height: 600px;
   position: relative;
   display: flex;
-  flex: column;
+  flex-direction: column;
+  text-align: start;
   justify-content: center;
-  align-items: top;
+  align-items: center;
   border-style: dotted;
   border-width: 1px;
 }
